# LeapGesture-library

./: README.md
DynamicGestures/: CMakeLists.txt  KFoldCrossValidation.h  PathUtil.h  config.cfg  dynamicGestureRecognition.cpp  hmmlib_example.cpp
DynamicGestures/HMM/: HMMClass.cpp  HMMClass.h
DynamicGestures/HMMlib-1.0.2/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  install_manifest.txt  main_page.doxy
DynamicGestures/HMMlib-1.0.2/HMMlib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  allocator_traits.hpp  cmake_install.cmake  float_traits.hpp  hmm.hpp  hmm_matrix.hpp  hmm_table.hpp  hmm_vector.hpp  operator_traits.hpp  sse_operator_traits.hpp
DynamicGestures/HMMlib-1.0.2/python/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hmmlib_python.cpp
DynamicGestures/HMMlib-1.0.2/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hmm_matrix_test  hmm_matrix_test.cpp  hmm_test  hmm_test.cpp  hmm_vector_test  hmm_vector_test.cpp
DynamicGestures/Model/: GestureFinger.cpp
DynamicGestures/StorageDriver/: BinaryFileStorageDriver.h
DynamicGestures/dlib-18.5/docs/: algorithms.html  api.html  assignment_learning_ex.cpp.html  bayes.html  bayes_net_ex.cpp.html  bayes_net_from_disk_ex.cpp.html  bayes_net_gui_ex.cpp.html  books.html  bridge_ex.cpp.html  bsp_ex.cpp.html  change_log.html  compile.html  compression.html  config_reader_ex.cpp.html  containers.html  custom_trainer_ex.cpp.html  empirical_kernel_map_ex.cpp.html  faq.html  fhog_ex.cpp.html  graph_labeling_ex.cpp.html  graph_tools.html  gui_api_ex.cpp.html  howto_contribute.html  image_ex.cpp.html  imaging.html  index.html  intro.html  iosockstream_ex.cpp.html  kcentroid_ex.cpp.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  (+47 more)
FingersDiff/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CrossValidation.tmp  FingerDiff.cpp  FingersDiff  Makefile  Run.sh  SVMclassificator.cpp  SVMclassificator.h  SVMstatic  cmake_install.cmake  dlon.lmr  peace.lmr
FingersDiff/Model/: GestureFinger.h  GestureHand.cpp  Vertex.cpp  Vertex.h
FingersDiff/PRecords/: r01000.lmr  r01010.lmr  r01011.lmr  r01100.lmr  r01111.lmr  r10000.lmr  r10001.lmr  r10010.lmr  r10011.lmr  r10100.lmr  r10101.lmr  r11011.lmr  r11100.lmr
FingersDiff/PRecordsKasia/: r00000.lmr  r00010.lmr  r00100.lmr  r00101.lmr  r00110.lmr  r00111.lmr  r01000.lmr  r01010.lmr  r01011.lmr  r01101.lmr  r10000.lmr  r10001.lmr  r10010.lmr  r10100.lmr  r10101.lmr  r10110.lmr  r10111.lmr  r11001.lmr  r11010.lmr  r11011.lmr  r11100.lmr  r11101.lmr
FingersDiff/Preprocessing/: LMpre.h
FingersDiff/Records/: r00000.lmr  r00001.lmr  r00010.lmr  r00011.lmr  r00100.lmr  r00101.lmr  r00110.lmr  r00111.lmr  r01001.lmr  r01101.lmr  r01110.lmr  r10000.lmr  r10110.lmr  r10111.lmr  r11000.lmr  r11001.lmr  r11010.lmr  r11011.lmr  r11100.lmr  r11101.lmr  r11110.lmr  r11111.lmr
FingersDiff/RecordsKasia/: r00000.lmr  r00001.lmr  r00010.lmr  r00011.lmr  r00101.lmr  r00110.lmr  r00111.lmr  r01000.lmr  r01001.lmr  r01010.lmr  r01100.lmr  r01110.lmr  r01111.lmr  r10010.lmr  r10011.lmr  r10100.lmr  r10101.lmr  r10110.lmr  r10111.lmr  r11000.lmr  r11010.lmr  r11100.lmr  r11101.lmr  r11110.lmr  r11111.lmr
FingersDiff/SVMtest/: liblinear.sh
FingersDiff/SVMtest/gesture1/: svm_gesture1.dat.model
FingersDiff/SVMtest/gesture4/: svm_gesture4.dat.model
FingersDiff/SVMtest/gesture5/: svm_gesture5.dat.model  svm_gesture5.dat.range
FingersDiff/SVMtest/gesture6/: svm_gesture6.dat.range  svm_gesture6.dat.scale.out
FingersDiff/SVMtest/test10_f1/: test10_f1.model  test10_f1.scale
FingersDiff/SVMtest/test10_f2/: test10_f2  test10_f2.model  test10_f2.scale.out
FingersDiff/SVMtest/test10_f5/: test10_f5
FingersDiff/SVMtest/test10_f6/: test10_f6.model  test10_f6.range  test10_f6.scale  test10_f6.scale.out
FingersDiff/SVMtest/test5_f1/: test5_f1.dat.model  test5_f1.dat.range  test5_f1.dat.scale.out
FingersDiff/SVMtest/test5_f2/: test5_f2.dat.range
FingersDiff/SVMtest/test5_f5/: test5_f5.dat.range  test5_f5.dat.scale
FingersDiff/SVMtest/test5_f6/: test5_f6.dat.range  test5_f6.dat.scale.out
FingersDiff/StorageDriver/: BinaryFileStorageDriver.cpp
FingersDiff/VS/: SVMstatic.vcxproj  ZERO_CHECK.vcxproj
FingersDiff/libsvm/: svm-predict  svm-predict.c  svm-train  svm-train.c
FingersDiff/libsvm/tools/: FOLDER DECRIPTION  easy.py  grid.py  svm_gesture.dat.range
FingersDiff/preprocessing/: LMpre.cpp  LMpre.h
LibLeap/: .cproject  (+22 more)
SVM_static/: CMakeLists.txt  LMReader.cpp  LMReader.h  README  SVMclassificator.cpp  SVMclassificator.h  dlon.lmr  peace.lmr  static.cpp
SVM_static/SVMtest/: datasety.odt  svm_gesture1.dat.range  svm_gesture1.dat.scale  svm_gesture2.dat.range  svm_gesture2.dat.scale  svm_gesture4.dat.range  svm_gesture4.dat.scale  svm_gesture5.dat.range  svm_gesture5.dat.scale  svm_gesture6.dat.range  svm_gesture6.dat.scale  svm_gesture7.dat.range  svm_gesture7.dat.scale
SVM_static/SVMtest/gesture1/: svm_gesture1.dat.range  svm_gesture1.dat.scale  svm_gesture1.dat.scale.out
SVM_static/SVMtest/gesture2/: svm_gesture2.dat.model  svm_gesture2.dat.range  svm_gesture2.dat.scale  svm_gesture2.dat.scale.out
SVM_static/SVMtest/gesture3/: svm_gesture3.dat.scale  svm_gesture3.dat.scale.out
SVM_static/SVMtest/gesture4/: svm_gesture4.dat.range
SVM_static/SVMtest/gesture5/: svm_gesture5.dat.range  svm_gesture5.dat.scale  svm_gesture5.dat.scale.out
SVM_static/SVMtest/gesture6/: svm_gesture6.dat.scale
SVM_static/SVMtest/gesture_old/: svm_gesture.dat.model  svm_gesture.dat.range  svm_gesture.dat.scale
SVM_static/SVMtest/test10_f1/: test10_f1  test10_f1.range  test10_f1.scale.out
SVM_static/SVMtest/test10_f2/: test10_f2.range  test10_f2.scale
SVM_static/VS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SVMstatic.sln  SVMstatic.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+1156 files in other folders)
